tests/data/errors/indentation/output-3-7.py
y = 2

def f():
	z = 2
    x = "906"
# error:   File "<string>", line 5
# error:     x = "906"
# error:             ^
# error: IndentationError: unindent does not match any outer indentation level

m()
# error: Traceback (most recent call last):
# error:   File "<string>", line 11, in <module>
# error: NameError: name 'm' is not defined
